# hodu-plugins

./: Cargo.toml  LICENSE  README.md  default-plugins.json  plugins.toml
backend-aot-cpu/: Cargo.toml  info.toml
backend-aot-cpu/src/: codegen.rs  compile.rs  lib.rs
backend-aot-cpu/src/codegen/: binary.rs  cast.rs  concat_split.rs  conv.rs  indexing.rs  matrix.rs  memory.rs  reduce.rs  shape.rs  unary.rs  windowing.rs
backend-hodu-interp-cpu/: Cargo.toml  build.rs  info.toml
backend-hodu-interp-cpu/src/: executor.rs  lib.rs
backend-hodu-interp-cpu/src/executor/: binary.rs  cast.rs  concat_split.rs  conv.rs  indexing.rs  matrix.rs  memory.rs  reduce.rs  shape.rs  unary.rs  windowing.rs
hodu-backend-aot-cpu-plugin/: Cargo.toml  README.md  manifest.json
hodu-backend-aot-cpu-plugin/src/: codegen.rs  compile.rs  main.rs
hodu-backend-aot-cpu-plugin/src/codegen/: binary.rs  cast.rs  concat_split.rs  conv.rs  indexing.rs  matrix.rs  memory.rs  reduce.rs  shape.rs  unary.rs  windowing.rs
hodu-backend-interp/: Cargo.toml
hodu-backend-interp/src/: executor.rs  lib.rs
hodu-backend-interp/src/executor/: binary.rs  cast.rs  concat_split.rs  conv.rs  indexing.rs  matrix.rs  memory.rs  reduce.rs  shape.rs  unary.rs  windowing.rs
