[package]
name = "hodu-cli-plugin-backend-hodu-interp-cpu"
version = "0.1.0"
description = "Hodu Interpreter backend plugin for Hodu"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = false
repository = "https://github.com/daminstudio/hodu-plugins"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
hodu-cli-plugin-sdk = { path = "../../hodu/hodu-cli-plugin-sdk" }

[dependencies]
hodu_core = { path = "../../hodu/crates/hodu_core" }
hodu_cpu_kernels = { path = "../../hodu/crates/hodu_cpu_kernels" }
hodu-cli-plugin-sdk = { path = "../../hodu/hodu-cli-plugin-sdk" }
