[package]
name = "hodu-backend-aot-cpu-plugin"
version = "0.1.1"
description = "AOT CPU backend plugin for Hodu - compiles snapshots to native code via C"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = false
repository = "https://github.com/daminstudio/hodu-plugins"

[[bin]]
name = "hodu-backend-aot-cpu-plugin"
path = "src/main.rs"

[dependencies]
cc = "1.2.48"
hodu_cpu_kernels = { git = "https://github.com/daminstudio/hodu" }
hodu-plugin-sdk = { git = "https://github.com/daminstudio/hodu" }
libc = "0.2.177"
libloading = "0.9.0"
serde_json = "1.0"
